[package]
name = "iso639"
version = "0.1.0"
authors = ["Nick Zana <me@nickzana.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
phf = "0.8.0"

[build-dependencies]
Inflector = "0.11.4"
csv = "1.1"
